add Mana-Com scraping

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mana-com_app",
+  "name": "mana-com-scraping-app",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
