--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "tough-cookie": "^4.1.4"
+    "tough-cookie": "^4.1.4",
+    "expo-task-manager": "~11.8.2",
+    "expo-background-fetch": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
