--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-config": "^0.18.11",
     "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -18,28 +19,27 @@
     "axios": "^1.7.2",
     "axios-cookiejar-support": "^5.0.2",
     "cheerio": "^1.0.0-rc.12",
-    "expo": "^51.0.16",
+    "expo": "~51.0.26",
+    "expo-background-fetch": "~12.0.1",
     "expo-status-bar": "~1.12.1",
+    "expo-task-manager": "~11.8.2",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-html-parser": "^0.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
-    "tough-cookie": "^4.1.4",
-    "expo-task-manager": "~11.8.2",
-    "expo-background-fetch": "~12.0.1"
+    "tough-cookie": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
     "@types/tough-cookie": "^4.0.5",
-    "typescript": "^5.5.2"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
