--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "apk-build": "eas build --profile preview --platform android"
   },
   "dependencies": {
-    "@expo/metro-config": "^0.18.11",
+    "@expo/metro-config": "~0.19.0",
     "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -20,28 +20,29 @@
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
     "axios-cookiejar-support": "^5.0.2",
-    "cheerio": "^1.0.0-rc.12",
-    "expo": "^51.0.31",
-    "expo-background-fetch": "~12.0.1",
-    "expo-status-bar": "~1.12.1",
-    "expo-task-manager": "~11.8.2",
+    "expo": "^52.0.27",
+    "expo-background-fetch": "~13.0.4",
+    "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "~12.0.4",
     "license-checker": "^25.0.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-html-parser": "^0.1.0",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-render-html": "^6.3.4",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.1.0",
+    "stream-browserify": "^3.0.0",
     "tough-cookie": "^4.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/tough-cookie": "^4.0.5",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.3.3"
   },
   "private": true
